@@ -1,34 +1,25 @@
 package edu.bootcamp_sb.service_market.config;
 
 
-import edu.bootcamp_sb.service_market.exception.CustomAccessDeniedHandler;
-import edu.bootcamp_sb.service_market.filter.JwtTokenValidatorFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.ProviderManager;
-import org.springframework.security.authentication.password.CompromisedPasswordChecker;
+import org.springframework.context.annotation.Profile;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.factory.PasswordEncoderFactories;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.password.HaveIBeenPwnedRestApiPasswordChecker;
-import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Arrays;
 import java.util.Collections;
-
-import static org.springframework.security.config.Customizer.withDefaults;
+import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
+@Profile("prod")
 public class SecurityConfig {
 
-    private final String[] publicUrls ={
+  private final String[] publicUrls ={
             "/swagger-ui.html",
             "/swagger-ui/**",
             "/v3/api-docs/**",
@@ -41,58 +32,27 @@ public class SecurityConfig {
             "/api/v1/providers/all"
     };
 
-
     @Bean
     SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(corsConfig->corsConfig.configurationSource(request -> {
-                    CorsConfiguration corsConfiguration = new CorsConfiguration();
-                    corsConfiguration.setAllowedOrigins(
-                            Collections.singletonList("*")
-                        );
-                    corsConfiguration.setAllowedMethods(Arrays.asList(
-                            "GET", "POST", "PUT", "DELETE", "OPTIONS")
-                    ); //pre-flight req
-                    corsConfiguration.setMaxAge(10L);
-                    corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
-                    return corsConfiguration;
-
+        JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
+        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(new KeycloakRoleConverter());
+        http.csrf(AbstractHttpConfigurer::disable)
+                .cors(corsConfig -> corsConfig.configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("*"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setExposedHeaders(List.of("Authorization"));
+                    config.setMaxAge(3600L);
+                    return config;
                 }))
-                .addFilterBefore(new JwtTokenValidatorFilter(), BasicAuthenticationFilter.class)
-                .authorizeHttpRequests(requests ->
-                        requests.requestMatchers(publicUrls).permitAll()
-                                .requestMatchers("/api/v1/**").authenticated()
-
-
-
-        );
-        http.formLogin(withDefaults());
-        http.httpBasic(withDefaults());
-        http.exceptionHandling(exceptionHandlingConfig->
-                exceptionHandlingConfig.accessDeniedHandler(new CustomAccessDeniedHandler()));
+                .authorizeHttpRequests(requests -> requests
+                        .requestMatchers(publicUrls).permitAll()
+                        .anyRequest().authenticated());
+        http.oauth2ResourceServer(resourceServerConfig -> resourceServerConfig.jwt(
+                jwtConfigurer -> jwtConfigurer.jwtAuthenticationConverter(jwtAuthenticationConverter)));
         return http.build();
     }
-
-    @Bean
-    public PasswordEncoder passwordEncoder(){
-
-        return PasswordEncoderFactories.createDelegatingPasswordEncoder();
-    }
-    
-    @Bean
-    public CompromisedPasswordChecker compromisedPasswordChecker(){
-        return new HaveIBeenPwnedRestApiPasswordChecker();
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(
-            UserDetailsService userDetailsService, PasswordEncoder passwordEncoder) {
-        AdminUsernamePasswordAuthenticationProvider authenticationProvider =
-                new AdminUsernamePasswordAuthenticationProvider(userDetailsService ,
-                        passwordEncoder);
-
-        return new ProviderManager(authenticationProvider);
-    }
-
 }
+
